--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Listing articles</h1>
 
+<%= link_to 'New Article', new_article_path %>
+
 <table>
   <tr>
     <th>Title</th>
@@ -15,3 +17,5 @@
     </tr>
   <% end %>
 </table>
+
+<%= link_to 'Back to Home', controller: 'welcome' %>
